--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,4 @@ services:
     volumes:
       - ./html/:/usr/share/nginx/html/
       - ./nginx_conf/nginx.conf:/etc/nginx/conf.d/default.conf
+    restart: always
